@@ -108,9 +108,9 @@
         <configuration>
           <source>21</source>
           <target>21</target>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
+<!--          <compilerArgs>-->
+<!--            <arg>&#45;&#45;enable-preview</arg>-->
+<!--          </compilerArgs>-->
         </configuration>
       </plugin>
 
@@ -140,9 +140,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.2</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
+<!--        <configuration>-->
+<!--          <argLine>&#45;&#45;enable-preview</argLine>-->
+<!--        </configuration>-->
       </plugin>
 
       <!-- Exec Plugin for running nodes -->
